--- a/k8s/monitoring/kustomization.yaml
+++ b/k8s/monitoring/kustomization.yaml
@@ -5,6 +5,7 @@ namespace: monitoring
 
 resources:
   - namespace.yaml
+  - repos.yaml
   - grafana-loki-bloom.yaml
   - kube-prometheus-stack.yaml
   - grafana-tempo.yaml
